--- a/modules/admin/app/public/views/public/attente.hbs
+++ b/modules/admin/app/public/views/public/attente.hbs
@@ -10,8 +10,13 @@
 	  	<div class="col-middle">
     	<p><span><b>L'alerte a été donnée dans<br> les locaux de VVF Villages !</b><br>On arrive ! Rendez-vous sur<br>votre mur facebook !</span></p>
     	<img src="/styles/public/gfx/a-gagner-small.png" width="281" height="111" alt="1 an de vacances à gagner ! et 10 week-ends*">
-        <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
-        <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+       <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+        <p class="p-gallerie">
+          <span>
+              En attendant venez voir<br>les photos déjà publiées !
+          </span>
+        </p>
+        <a class="btn-defi btn-gallerie" title="Je lance le défi" href="#"><span></span><b>Gallerie de photos</b></a>
     </div>
 	<hr>
     <div class="col-video">
