--- a/modules/admin/app/public/styles/public/styles.css
+++ b/modules/admin/app/public/styles/public/styles.css
@@ -410,7 +410,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
 	margin-left:90px;
 }
 .btn-gallerie{
-
+  width:345px;
 }
 #wrapper {
 	width:793px;
@@ -543,7 +543,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
 	font-size:12px;
 	color:#f36d24;
 	text-transform:uppercase;
-  padding: 55px 0;
+  padding: 55px 0 14px;
 }
 .tirage span {
 	display:block;
@@ -594,6 +594,10 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
     position: absolute;
     right: 150px;
     top: 28px;
+}
+
+.p-gallerie{
+  padding-top: 14px;
 }
 
 @media screen and (max-width: 809px) {
