--- a/modules/admin/app/public/views/public/attente.hbs
+++ b/modules/admin/app/public/views/public/attente.hbs
@@ -16,7 +16,7 @@
               En attendant venez voir<br>les photos déjà publiées !
           </span>
         </p>
-        <a class="btn-defi btn-gallerie" title="Je lance le défi" href="#"><span></span><b>Gallerie de photos</b></a>
+        <a class="btn-defi btn-gallerie" title="Je lance le défi" href="https://www.facebook.com/media/set/?set=a.580681488726559.1073741836.194889667305745&type=3"><span></span><b>Gallerie de photos</b></a>
     </div>
 	<hr>
     <div class="col-video">
