--- a/modules/admin/app/public/views/public/fermeture-weekend.hbs
+++ b/modules/admin/app/public/views/public/fermeture-weekend.hbs
@@ -12,6 +12,12 @@
     	<img src="/styles/public/gfx/a-gagner-small.png" width="281" height="111" alt="1 an de vacances à gagner ! et 10 week-ends*">
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
         <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+        <p class="p-gallerie">
+          <span>
+              En attendant venez voir<br>les photos déjà publiées !
+          </span>
+        </p>
+        <a class="btn-defi btn-gallerie" title="Je lance le défi" href="https://www.facebook.com/media/set/?set=a.580681488726559.1073741836.194889667305745&type=3"><span></span><b>Gallerie de photos</b></a>
     </div>
 	<hr>
     <div class="col-video">
