--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -1,31 +1,32 @@
 {{> head}}
 <div id="wrapper">
-    <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
-      <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
-      <h2>fêtons ensemble notre<br>nouvelle installation</h2>
+      <h1><img src="gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+          <h2>fêtons ensemble notre<br>nouvelle installation</h2>
         <span>VVF Villages vous passe<br>le <b>Bonjour</b> depuis ses<br>nouveaux locaux !</span>
     </div>
-    <img src="/styles/public/gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
-    <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
+    <img src="gfx/pola-mathieu-celine.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
+    <img src="gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
     <div class="col-right col-right-large">
-      <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
-          <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>    </div>
-    <img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
-    <div class="col-int-large">
-      <p><span>Vite ! Deviens fan de la page !</span></p>
-        <img src="/styles/public/gfx/j-aime-fleches.png" width="136" height="108" alt="j'aime" class="j-aime-img">
-        <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-
+        <img src="gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
+        <div class="btn-like">
+          <img src="gfx/fleches.png" width="223" height="48">
+          <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+        </div>
     </div>
-  <hr>
+    <div class="jouer">
+        <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
+          <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>    </div>
+    </div>
+    <hr>
     <div class="col-video">
         <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
         <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
         <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope.com/reglement" title="Réglement complet">https://hello.fb.byperiscope.com/reglement</a></div>
    </div>
 </div>
+
 <div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="facebookModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -56,4 +57,5 @@
     </div>
   </div>
 </div>
+
 {{> footer}}
