--- a/modules/admin/app/public/views/public/accueil-desktop.hbs
+++ b/modules/admin/app/public/views/public/accueil-desktop.hbs
@@ -1,17 +1,17 @@
 {{> head-desktop}}
 <div id="wrapper">
      <div class="feuille">
-      <h1><img src="gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+      <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
           <h2>fêtons ensemble notre<br>nouvelle installation</h2>
         <span>VVF Villages vous passe<br>le <b>Bonjour</b> depuis ses<br>nouveaux locaux !</span>
     </div>
-    <img src="gfx/pola-mathieu-celine.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
-    <img src="gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
+    <img src="/styles/public/gfx/pola-mathieu-celine.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
+    <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
     <div class="col-right col-right-large">
-        <img src="gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
+        <img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
         <div class="btn-like">
-          <img src="gfx/fleches.png" width="223" height="48">
+          <img src="/styles/public/gfx/fleches.png" width="223" height="48">
           <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
         </div>
     </div>
