--- a/modules/admin/app/public/views/public/accueil-desktop.hbs
+++ b/modules/admin/app/public/views/public/accueil-desktop.hbs
@@ -17,8 +17,8 @@
     </div>
     <div class="jouer">
         <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
-          <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>    </div>
-    </div>
+          <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>
+      </div>
     <hr>
     <div class="col-video">
         <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
