--- a/modules/admin/app/public/views/public/accueil-desktop.hbs
+++ b/modules/admin/app/public/views/public/accueil-desktop.hbs
@@ -17,7 +17,7 @@
     </div>
     <div class="jouer">
         <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
-          <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>
+          <a id="defi" href="#" title="Je lance le défi" class="btn-defi"><span></span><b>Je lance le défi</b></a>
       </div>
     <hr>
     <div class="col-video">
