--- a/modules/admin/app/public/views/public/attente.hbs
+++ b/modules/admin/app/public/views/public/attente.hbs
@@ -17,12 +17,11 @@
               En attendant venez voir<br>les photos déjà publiées !
           </span>
         </p>
-        <a class="btn-defi btn-gallerie" title="Je lance le défi" href="https://www.facebook.com/media/set/?set=a.580681488726559.1073741836.194889667305745&type=3"><span></span><b>Galerie de photos</b></a>
+        <a class="btn-defi btn-gallerie" title="Je lance le défi" href="https://www.facebook.com/media/set/?set=a.580681488726559.1073741836.194889667305745&type=3" target="_top"><span></span><b>Galerie de photos</b></a>
     </div>
 	<hr>
     <div class="col-video">
-        <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
-        <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope.com/reglement" title="Réglement complet">https://hello.fb.byperiscope.com/reglement</a></div>
+        {{> reglement-block}}
    </div>
 </div>
 {{> footer}}
