--- a/modules/admin/app/public/views/public/accueil-desktop.hbs
+++ b/modules/admin/app/public/views/public/accueil-desktop.hbs
@@ -22,8 +22,7 @@
     <hr>
     <div class="col-video">
         <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
-        <p>Le réglement complet des opérations est adressé, à titre gratuit, a toute personne qui en fait la demande à Maître David, huissier de justice, 15 boulevard Pochet-Lagaye BP 373 63010 Clermont-Ferrand Cedex</p>
-        <div class="conditions">*Lire le réglement complet et détail de lots <a href="https://hello.fb.byperiscope.com/reglement" title="Réglement complet">https://hello.fb.byperiscope.com/reglement</a></div>
+        {{> reglement-block}}
    </div>
 </div>
 
