--- a/modules/admin/app/public/views/public/pas-autorisation.hbs
+++ b/modules/admin/app/public/views/public/pas-autorisation.hbs
@@ -15,8 +15,7 @@
     </div>
 	<hr>
   	<div class="col-video">
-        <a href="/reglement" target="_blank" title="Règlement" class="reglement">Règlement</a>
-        <div class="conditions">*Soumis à conditions</div>
+        {{> reglement-block}}
    </div>
 </div>
 {{> footer}}
