--- a/modules/admin/app/public/styles/public/styles-desktop.css
+++ b/modules/admin/app/public/styles/public/styles-desktop.css
@@ -586,3 +586,41 @@ margin-top: 20px;
   text-align: center;
   padding: 0 100px;
 }
+
+.polaroid-images{
+    position: relative;
+    z-index: 1;
+}
+
+.polaroid-images a:after {
+    color: #333;
+    content: attr(title);
+    font-size: 20px;
+    position: relative;
+    top: 15px;
+}
+.polaroid-images a {
+    -webkit-transform: translate(-130px, 19px) rotate(-24deg);
+    -moz-transform: translate(-130px, 19px) rotate(-24deg);
+    -ms-transform: translate(-130px, 19px) rotate(-24deg);
+    -o-transform: translate(-130px, 19px) rotate(-24deg);
+    transform: translate(-130px, 19px) rotate(-24deg);
+}
+.polaroid-images a {
+    background: none repeat scroll 0 0 white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    display: inline;
+    float: left;
+    margin: 0 15px 30px;
+    padding: 10px 10px 25px;
+    position: absolute;
+    text-align: center;
+    text-decoration: none;
+    transition: all 400ms ease-out 0s;
+    z-index: 0;
+}
+
+.polaroid-images img {
+    display: block;
+    width: inherit;
+}
