--- a/modules/admin/app/public/styles/public/styles-desktop.css
+++ b/modules/admin/app/public/styles/public/styles-desktop.css
@@ -424,7 +424,7 @@ margin-top: 20px;
   padding-bottom: 20px;
   overflow-x: hidden;
 }
-#wrapper .polas-accueil {
+.wrapper-video .polas-accueil {
    top: 464px;
 }
 .header-accueil {
