--- a/modules/admin/app/public/views/public/accueil-desktop-photo.hbs
+++ b/modules/admin/app/public/views/public/accueil-desktop-photo.hbs
@@ -1,6 +1,6 @@
 {{> head-desktop}}
 
-<div id="wrapper">
+<div id="wrapper" class="wrapper-video">
      <div class="feuille">
       <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
           <h2>fêtons ensemble notre<br>nouvelle installation</h2>
