--- a/modules/admin/app/public/views/public/redirect.hbs
+++ b/modules/admin/app/public/views/public/redirect.hbs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta charset=utf-8>
         <title>VVF Villages like you</title>
-        <script>top.location="https://www.facebook.com/VVFVillages.pageofficielle/app_708032399246642?app_data={\"id\":{{id}}}"</script>
+        <script>top.location='https://www.facebook.com/VVFVillages.pageofficielle/app_708032399246642?app_data={{data}}'</script>
     </head>
     <body></body>
 </html>
