--- a/modules/admin/app/public/views/public/accueil-desktop-photo.hbs
+++ b/modules/admin/app/public/views/public/accueil-desktop-photo.hbs
@@ -9,7 +9,7 @@
     <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
     <div class="col-right col-right-large">
       <div class="polaroid-images">
-          <a title="Bonjour {{name}} !" href="https://www.facebook.com/media/set/?set=a.580681488726559.1073741836.194889667305745&amp;type=3" target="_top">
+          <a title="Bonjour {{first_name}} !" href="https://www.facebook.com/media/set/?set=a.580681488726559.1073741836.194889667305745&amp;type=3" target="_top">
               <img height="250" src="{{Hello.Photos.filename}}" />
           </a>
       </div>
