--- a/modules/admin/app/public/views/public/accueil-mobile-photo.hbs
+++ b/modules/admin/app/public/views/public/accueil-mobile-photo.hbs
@@ -1,4 +1,33 @@
 {{> head-mobile-photo}}
+
+<div id="wrapper" class="wrapper-photo">
+    <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
+    <div class="feuille">
+        <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+        <h2>fêtons ensemble notre<br>nouvelle installation</h2>
+        <span>VVF Villages vous passe<br>le <b>Bonjour</b> depuis ses<br>nouveaux locaux !</span>
+    </div>
+
+    <div class="polaroid-images">
+        <a title="Bonjour {{first_name}} !" href="">
+            <img src="{{Hello.Photos.filename}}" />
+        </a>
+    </div>
+    <img src="/styles/public/gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
+    <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
+    <div class="col-right col-right-large">
+        <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+        <img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="vacances">
+        <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
+        <p><span>Qui sera le plus rapide aujourd'hui pour vous saluer chez VVF Villages</span></p>
+    <a id="defi" href="#" title="Je lance le défi" class="btn-defi btn-margin"><span></span><b>Je lance le défi</b></a>    </div>
+    <hr>
+    <div class="col-video">
+        <iframe width="752" height="414" src="//www.youtube.com/embed/fEjFC4yjKCU" frameborder="0" allowfullscreen></iframe>
+        {{> reglement-block}}
+    </div>
+
+
 <div id="wrapper">
     <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
@@ -25,6 +54,10 @@
         {{> reglement-block}}
    </div>
 </div>
+
+
+
+
 <div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="facebookModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
