--- a/modules/admin/app/public/views/admin/partials/control/camera_controls.hbs
+++ b/modules/admin/app/public/views/admin/partials/control/camera_controls.hbs
@@ -123,21 +123,21 @@
         </form>
     </div>
 </div>
-{{!<div class="row">
-    <div class="col-sm-12"><h3>System update</h3></div>
-</div>
+<!-- <div class="row">
+    <div class="col-sm-12"><h3>Restart</h3></div>
+</div> -->
 <div class="row">
     <div class="col-sm-12">
         <form class="form-inline sysup" role="form">
             <fieldset>
-                <div class="form-group">
+                <div class="form-group hide">
                     <input type="text" class="form-control input-sm username" placeholder="User">
                 </div>
-                <div class="form-group">
+                <div class="form-group  hide">
                     <input type="password" class="form-control input-sm pwd" placeholder="Password">
                 </div>
-                <button type="submit" class="btn btn-default btn-sm">SVN UP</button>
+                <button type="submit" class="btn btn-default btn-sm">Restart</button>
             </fieldset>
         </form>
     </div>
-</div>}}
+</div>
